[backend] fix: eliminar malas implementaciones
Existía un bug que hacía que tres clases se crearan entre ellas en un
bucle infinito, a demás, no aparecía la verdadera pagina de login